--- a/.github/workflows/ci-main.yaml
+++ b/.github/workflows/ci-main.yaml
@@ -6,6 +6,6 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
-      - run: echo "jar_name=$(./mill showNamed tmp.jar 2>/dev/null | jq -r '."tmp.jar"')" >> $GITHUB_OUTPUT
+      - run: echo "bin_name=$(./mill showNamed tmp.nativeLink 2>/dev/null | jq -r '."tmp.nativeLink"')" >> $GITHUB_OUTPUT
         id: get-name
-      - run: echo "${{ steps.get-name.outputs.jar_name }}"
+      - run: echo "${{ steps.get-name.outputs.bin_name }}"
