--- a/.github/workflows/ci-main.yaml
+++ b/.github/workflows/ci-main.yaml
@@ -2,10 +2,17 @@ name: Demo Mill Problem
 on:
   push:
 jobs:
-  build:
+  demo-jar-command:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
-      - run: echo "bin_name=$(./mill showNamed tmp.nativeLink 2>/dev/null | jq -r '."tmp.nativeLink"')" >> $GITHUB_OUTPUT
+      - run: echo "name=$(./mill showNamed tmp.jar | jq -r '."tmp.jar"')" >> $GITHUB_OUTPUT
         id: get-name
-      - run: echo "${{ steps.get-name.outputs.bin_name }}"
+      - run: echo "${{ steps.get-name.outputs.name }}"
+  demo-nativeLink-command:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo "name=$(./mill showNamed tmp.nativeLink | jq -r '."tmp.nativeLink"')" >> $GITHUB_OUTPUT
+        id: get-name
+      - run: echo "${{ steps.get-name.outputs.name }}"
